# delgaz-watcher

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
