[package]
name = "delgaz-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
colored = "3.1.1"
mqtt5 = "0.32.2"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version ="1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
